--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ras",
+  "name": "bhoj",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://ras-api-server.herokuapp.com/"
+  "proxy": "https://bhoj-server.herokuapp.com/"
 }
